# Recognice-CCTV-c-

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  RecognicePeopleCCTV.sln
recognize/: .gitignore  CMakeLists.txt  Dependency.cmake  README.md
recognize/Observer/: CMakeLists.txt  Observer.cpp
recognize/Observer/Extensions/opencv/: extension_cv.cpp
recognize/Observer/Implementations/opencv/: BlobGraphics.hpp  Frame.cpp  Frame.hpp  FrameContextualizer.cpp  FrameContextualizer.hpp  ImageDisplay.cpp  ImageDisplay.hpp  ImageDraw.cpp  ImageDraw.hpp  ImageDrawBlob.cpp  ImageDrawBlob.hpp  ImageIO.cpp  ImageIO.hpp  ImagePersistence.hpp  ImageProcessing.cpp  ImageProcessing.hpp  ImageTransformation.hpp  Implementation.hpp  TypesConversions.cpp  TypesConversions.hpp  (+4 more)
recognize/Observer/Samples/: AsyncInferenceDemo.cpp  Cameras.cpp  ConfigurationReader.cpp  Contours.cpp  LiveBlobDetection.cpp  Masks.cpp  Recognizer.cpp  Recording.cpp  VideoBlobDetection.cpp
recognize/Observer/src/: CircularFrameBuffer.hpp  Functionality.cpp  Functionality.hpp  IFrame.hpp  IFunctionality.hpp  IImageDisplay.hpp  ImageDisplay.hpp  ImagePersistence.hpp  ImageProcessing.hpp  ImageTransformation.hpp  Implementation.hpp  Point.cpp  Point.hpp  Rect.cpp  Rect.hpp  SimpleBlockingQueue.hpp  Size.hpp  Timer.hpp  Vector.cpp  Vector.hpp
recognize/sample/: sample_main.cpp
recognize/src/: BaseCameraEvent.hpp  BaseChainOfResponsibility.hpp  BaseEventValidator.hpp  BaseObserverPattern.hpp  CMakeLists.txt  Camera.hpp  CameraConfiguration.hpp  CameraObserver.cpp  CameraObserver.hpp  CicularFrameBuffer.cpp  CicularFrameBuffer.hpp  CircularFrameBuffer.cpp  CircularFrameBuffer.hpp  CommonEventValidator.hpp  Configuration.hpp  ConfigurationFile.cpp  ConfigurationParser.cpp  ConfigurationParser.hpp  Event.cpp  Event.hpp  EventValidator.cpp  EventValidator.hpp  FrameDisplay.cpp  FrameDisplay.hpp  FrameProcessor.cpp  FrameProcessor.hpp  IFunctionality.hpp  ImageNotification.cpp  ImageNotification.hpp  ImagePersistence.hpp  ImageTranformationOpenCV.hpp  ImageTransformation.hpp  LocalWebNotifications.cpp  LocalWebNotifications.hpp  MessagingService.hpp  Notification.cpp  Notification.hpp  NotificationsController.cpp  NotificationsController.hpp  NotificationsServiceConfiguration.hpp  (+56 more)
recognize/src/utils/: SpecialEnums.hpp  SpecialFunctions.cpp  SpecialFunctions.hpp  SpecialStrings.cpp  StringUtility.cpp  StringUtility.hpp
recognize/tests/: .gitignore  CircularFIFOTest.cpp  ConfigurationTest.cpp  MainTests.cpp  MathTest.cpp  RectTest.cpp  Tests.cmake  ThresholdManagerTest.cpp  VideoBufferTest.cpp
recognize/tests/AsyncInferenceTest/: AsyncInferenceTest.cpp
recognize/tools/Perfomance/: GetPerfomanceInformation.py  perfomance_runner.py  profile.txt  profile_reader.py
webRecognize/: .clang-format  .gitignore  CMakeLists.txt  Dependency.cmake  README.md  suppressions.txt
webRecognize/src/: AreaSelector.cpp  AreaSelector.hpp  CMakeLists.txt  Constans.hpp  CronJobScheduler.cpp  CronJobScheduler.hpp  SocketData.hpp  VideoBufferTasksManager.cpp  VideoBufferTasksManager.hpp  WebsocketService.hpp  base64.cpp  base64_2.hpp  main.cpp  new_main.cpp  server_types.hpp  server_utils.cpp  server_utils.hpp
webRecognize/src/CL/: ConfigurationDAOCache.cpp  ConfigurationDAOCache.hpp  NotificationCL.cpp  NotificationCL.hpp
webRecognize/src/Controller/: AIServerController.hpp  CameraController.hpp  ConfigurationController.hpp  ControllerUtils.hpp  LiveViewController.hpp  NotificationController.cpp  NotificationController.hpp  ObserverController.hpp  ServerConfigurationController.hpp  StreamingController.hpp  VideoBufferController.hpp  WebsocketNotificatorController.hpp  WebsocketVideoBufferController.hpp
webRecognize/src/DAL/: ConfigurationDAO.cpp  ConfigurationDAO.hpp  ICameraRepository.hpp  IConfigurationDAO.hpp  INotificationRepository.hpp  IRepository.hpp  IServerConfigurationPersistance.hpp
webRecognize/src/DTO/: AvailableConfigurationDTO.hpp  AvailableConfigurationsDTO.hpp  DTOBlob.hpp  DTOCamera.hpp  DTONotification.hpp  DTONotificationDebugVideo.hpp  ObserverStatusDTO.hpp  json_dto_declarations.hpp
webRecognize/src/Domain/: Camera.cpp  Camera.hpp  Notification.cpp  Notification.hpp
webRecognize/src/LiveVideo/: CameraLiveVideo.hpp  LiveVideo.hpp  LiveViewExceptions.hpp  LiveViewsManager.hpp  ObserverLiveVideo.hpp
webRecognize/src/Notifications/: DTONotification.cpp  DTONotification.hpp  NotificationEndPoints.cpp  NotificationEndPoints.hpp  Notifications.cpp  Notifications.hpp  WebsocketNotificator.hpp
webRecognize/src/Parsing/: JsonNotification.hpp
webRecognize/src/Pattern/: VideoBufferSubscriberPublisher.hpp
webRecognize/src/Serialization/: JsonAvailableConfigurationDTO.hpp  JsonSerialization.hpp
webRecognize/src/Server/: RecognizeContext.hpp  ServerConfiguration.hpp  ServerConfigurationProvider.cpp  ServerConfigurationProvider.hpp  ServerContext.hpp
webRecognize/src/Streaming/: IBroadcastService.hpp  IStreamingService.hpp  IStreamingSetupService.hpp  PeerStreamingCapabilities.hpp  StreamingServiceSelector.hpp  WebsocketService.hpp  streaming_include.hpp
webRecognize/src/Utils/: DateUtils.hpp  Filesystem.hpp  JsonLibrariesConversion.cpp  JsonLibrariesConversion.hpp  JsonUtils.hpp  ObserverStatus.hpp  StringUtils.hpp  ThreadName.hpp  ThreadSafeFlag.hpp  VideoBuffer.hpp
webRecognize/src/serverhelpers/: AsyncFileReader.h  AsyncFileStreamer.h  Middleware.h  Range.h
webRecognize/src/stream_content/: FileExtension.cpp  FileExtension.h  FileExtension.hpp  FileReader.cpp  FileReader.h  FileReader.hpp  FileStreamer.cpp  FileStreamer.h  FileStreamer.hpp  LiveVideo.hpp  Range.cpp  Range.h  Range.hpp  StaticFilesHandler.cpp  StaticFilesHandler.hpp
webRecognize/src/tests/: CMakeLists.txt  tests.cpp
webRecognize/src/web/: .eslintrc.json  .prettierrc  app.js  elements.json  index.html  jsconfig.json  package.json  translations.json  webpack.config.js
webRecognize/uWebSockets/: README.md
webRecognize/uWebSockets/src/: App.h  AsyncSocket.h  HttpResponse.h  HttpRouter.h  WebSocketContextData.h
(+424 files in other folders)
